<resources>
    <string name="app_name">MOODeration</string>

    <string name="mood_history_label">My Mood History</string>
    <string name="followed_moods_label">Followed Moods</string>
    <string name="add_mood_event_label">Add Mood Event</string>
    <string name="follow_request_label">My Follow Requests</string>
    <string name="mood_history_map_label">My Mood History Map</string>
    <string name="find_participant_label">Find a Person</string>
    <string name="participant_profile_label">Send Follow Request</string>
    <string name="followed_mood_history_map_label">Followed Moods Map</string>

    <string name="mood_happy">&#x1f60a; Happy</string>
    <string name="mood_sad">&#x1f622; Sad</string>
    <string name="mood_mad">&#x1f620; Mad</string>
    <string name="mood_fear">&#x1f631; Afraid</string>
    <string name="mood_disgust">&#x1f922; Disgusted</string>

    <string name="social_none">Not specified</string>
    <string name="social_alone">Alone</string>
    <string name="social_one_person">One other person</string>
    <string name="social_several_people">Two to several people</string>
    <string name="social_crowd">Crowd</string>

    <string name="mood_no_filter">All mood events</string>

    <string name="reason_hint">Reason</string>
    <string name="save_mood_event_text">Confirm</string>
    <string name="location_toggle_text">Attach location</string>
    <string name="take_photo_button_text">Take a photo</string>
    <string name="delete_photo_button_text">Delete photo</string>

    <string name="edit_mood_label">Edit Mood Event</string>

    <string name="auth_prompt_username">Display name</string>
    <string name="auth_prompt_email">Email</string>
    <string name="auth_prompt_password">Password</string>
    <string name="auth_prompt_reenter_password">Re-enter password</string>
    <string name="auth_action_sign_in">Sign in</string>
    <string name="auth_action_sign_up">Create account</string>
    <string name="auth_action_log_out">Log out</string>
    <string name="auth_prompt_invalid_username">Not a valid username</string>
    <string name="auth_prompt_invalid_email">Not a valid email</string>
    <string name="auth_prompt_invalid_password">Password must be >5 characters</string>
    <string name="auth_prompt_invalid_password2">Passwords must match</string>
    <string name="auth_error_login_invalid_email">"Couldn't log in: unrecognized email"</string>
    <string name="auth_error_login_invalid_password">"Couldn't log in: incorrect password"</string>
    <string name="auth_error_login_generic">"Couldn't log in. Please check your internet access or try again later"</string>
    <string name="auth_error_signup_username_collision">"Coudn't sign up: an account already exists with that username"</string>
    <string name="auth_error_signup_email_collision">"Coudn't sign up: an account already exists with that email"</string>
    <string name="auth_error_signup_generic">"Couldn't sign up. Please check your internet access or try again later"</string>

    <string name="follow_button">Follow</string>
    <string name="follow_request_sent">Follow request sent.</string>
    <string name="search_bar_text">Find a person</string>
    <string name="send_follow_request_menu_send">Send request</string>
    <string name="send_follow_request_menu_cancel">Cancel</string>
    <string name="send_follow_request_menu_message">If this participant accepts your follow request, you will be able to see their most recent mood event in your feed.</string>
    <string name="title_activity_maps">Map</string>
</resources>
